Removed files from the index (now ignored)

--- a/notebooks/Next Token Syntax Explanations.ipynb
+++ b/notebooks/Next Token Syntax Explanations.ipynb
@@ -29,44 +29,98 @@
     "    transformers.__version__ >= MIN_TRANSFORMERS_VERSION\n",
     "), f\"Please upgrade transformers to version {MIN_TRANSFORMERS_VERSION} or higher.\"\n",
     "\n",
-    "root_dir = \"/Users/kenzaamara/GithubProjects/shap/shap2\"\n",
+    "root_dir = \"/Users/kenzaamara/GithubProjects/syntax-shap/shap2\"\n",
     "sys.path.append(root_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "model-00001-of-00002.safetensors: 100%|██████████| 9.94G/9.94G [21:18<00:00, 7.78MB/s]\n",
-      "model-00002-of-00002.safetensors: 100%|██████████| 4.54G/4.54G [09:29<00:00, 7.97MB/s]\n",
-      "Downloading shards: 100%|██████████| 2/2 [30:48<00:00, 924.45s/it] \n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [01:01<00:00, 30.78s/it]\n",
-      "generation_config.json: 100%|██████████| 116/116 [00:00<00:00, 337kB/s]\n",
-      "tokenizer_config.json: 100%|██████████| 967/967 [00:00<00:00, 6.97MB/s]\n",
-      "tokenizer.model: 100%|██████████| 493k/493k [00:00<00:00, 2.37MB/s]\n",
-      "tokenizer.json: 100%|██████████| 1.80M/1.80M [00:00<00:00, 3.86MB/s]\n",
-      "special_tokens_map.json: 100%|██████████| 72.0/72.0 [00:00<00:00, 127kB/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m model\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mis_decoder \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# set text-generation params under task_specific_params\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtask_specific_params\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtext-generation\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdo_sample\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax_new_tokens\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemperature\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.7\u001b[39m,\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtop_k\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m50\u001b[39m,\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno_repeat_ngram_size\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m,\n\u001b[1;32m     16\u001b[0m }\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object does not support item assignment"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [01:02<00:00, 31.36s/it]\n"
      ]
     }
    ],
    "source": [
-    "model_name = \"mistralai/Mistral-7B-v0.1\"#\"gpt2\"\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"mistralai/Mistral-7B-v0.1\")\n",
+    "model.save_pretrained(\"/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/tokenizer_config.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/special_tokens_map.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/vocab.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/merges.txt',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/added_tokens.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2/tokenizer.json')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "tokenizer.save_pretrained(\"/Users/kenzaamara/GithubProjects/syntax-shap/models/gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral/tokenizer_config.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral/special_tokens_map.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral/tokenizer.model',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral/added_tokens.json',\n",
+       " '/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral/tokenizer.json')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"mistralai/Mistral-7B-v0.1\")\n",
+    "tokenizer.save_pretrained(\"/Users/kenzaamara/GithubProjects/syntax-shap/models/mistral\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = \"gpt2\"#\"mistralai/Mistral-7B-v0.1\"\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"gpt2\") #\n",
     "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
@@ -78,9 +132,9 @@
     "model.config.task_specific_params[\"text-generation\"] = {\n",
     "    \"do_sample\": True,\n",
     "    \"max_new_tokens\": 1,\n",
-    "    \"temperature\": 0.7,\n",
-    "    \"top_k\": 50,\n",
-    "    \"no_repeat_ngram_size\": 2,\n",
+    "    #\"temperature\": 0.7,\n",
+    "    #\"top_k\": 50,\n",
+    "    #\"no_repeat_ngram_size\": 2,\n",
     "}"
    ]
   },
@@ -91,49 +145,60 @@
    "outputs": [],
    "source": [
     "from models import TextGeneration\n",
-    "\n",
-    "lmmodel = TextGeneration(model, tokenizer)"
+    "import torch\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "lmmodel = TextGeneration(model, tokenizer, device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.X ['Peter is a' 'A boy is a']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[27449],\n",
-       "       [ 2933]])"
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(50257, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2Attention(\n",
+       "          (c_attn): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+       ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input = (np.array([\"Peter is a father with a\", \"A boy is a\"], dtype=\"<U10\"),)\n",
-    "lmmodel(*input)"
+    "lmmodel.inner_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -141,13 +206,6 @@
      "output_type": "stream",
      "text": [
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.X ['Peter is a' 'A boy is a']\n"
      ]
     },
     {
@@ -156,13 +214,77 @@
        "array([[2933]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lmmodel(\"A boy is not a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[27449]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = (np.array([\"Peter is a father with a\"], dtype=\"<U10\"),)\n",
+    "lmmodel(*input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lmmodel.inner_model.config.task_specific_params[\"text-generation\"] = {\n",
+    "    \"do_sample\": True,\n",
+    "    \"max_new_tokens\": 1,\n",
+    "    \"temperature\": 0.7,\n",
+    "    \"top_k\": 50,\n",
+    "    \"no_repeat_ngram_size\": 2,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[  32, 2933,  318,  407,  257]]), 'attention_mask': tensor([[1, 1, 1, 1, 1]])}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"A boy is not a\"\n",
+    "tokenizer([prompt], return_tensors=\"pt\")"
    ]
   },
   {
