--- a/notebooks/Sensitivity_Analysis.ipynb
+++ b/notebooks/Sensitivity_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32807</th>\n",
+       "      <th>46199</th>\n",
        "      <td>0.004985</td>\n",
        "      <td>0.004985</td>\n",
        "      <td>0.004985</td>\n",
@@ -182,7 +182,7 @@
        "      <td>generics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32808</th>\n",
+       "      <th>46200</th>\n",
        "      <td>-0.158138</td>\n",
        "      <td>-0.317924</td>\n",
        "      <td>0.412794</td>\n",
@@ -197,7 +197,7 @@
        "      <td>generics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32809</th>\n",
+       "      <th>46201</th>\n",
        "      <td>0.978595</td>\n",
        "      <td>0.961704</td>\n",
        "      <td>0.985015</td>\n",
@@ -212,7 +212,7 @@
        "      <td>generics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32810</th>\n",
+       "      <th>46202</th>\n",
        "      <td>0.090099</td>\n",
        "      <td>0.090099</td>\n",
        "      <td>-0.011166</td>\n",
@@ -227,7 +227,7 @@
        "      <td>generics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32811</th>\n",
+       "      <th>46203</th>\n",
        "      <td>0.042040</td>\n",
        "      <td>-0.067018</td>\n",
        "      <td>0.088622</td>\n",
@@ -243,7 +243,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32812 rows × 12 columns</p>\n",
+       "<p>46204 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -254,11 +254,11 @@
        "3        -0.054903  0.020616  0.014170      -0.852201       0.1   \n",
        "4         0.030357 -0.155401 -0.130865       0.687662       0.7   \n",
        "...            ...       ...       ...            ...       ...   \n",
-       "32807     0.004985  0.004985  0.004985      -8.514475       0.1   \n",
-       "32808    -0.158138 -0.317924  0.412794       0.571078       0.5   \n",
-       "32809     0.978595  0.961704  0.985015      -3.583949       0.3   \n",
-       "32810     0.090099  0.090099 -0.011166     -11.408674       0.1   \n",
-       "32811     0.042040 -0.067018  0.088622       0.563162       0.3   \n",
+       "46199     0.004985  0.004985  0.004985      -8.514475       0.1   \n",
+       "46200    -0.158138 -0.317924  0.412794       0.571078       0.5   \n",
+       "46201     0.978595  0.961704  0.985015      -3.583949       0.3   \n",
+       "46202     0.090099  0.090099 -0.011166     -11.408674       0.1   \n",
+       "46203     0.042040 -0.067018  0.088622       0.563162       0.3   \n",
        "\n",
        "       prob_diff_at_k  input_id  \\\n",
        "0            0.781496        94   \n",
@@ -267,11 +267,11 @@
        "3            0.575964       355   \n",
        "4            0.296770       305   \n",
        "...               ...       ...   \n",
-       "32807        0.529815        81   \n",
-       "32808        0.021312      2384   \n",
-       "32809        0.807675      1431   \n",
-       "32810        0.715237      3653   \n",
-       "32811        0.702404      1598   \n",
+       "46199        0.529815        81   \n",
+       "46200        0.021312      2384   \n",
+       "46201        0.807675      1431   \n",
+       "46202        0.715237      3653   \n",
+       "46203        0.702404      1598   \n",
        "\n",
        "                                                   input  algorithm  n_token  \\\n",
        "0                               Dallas is not located in  partition        5   \n",
@@ -280,11 +280,11 @@
        "3                                Martha is a aunt with a  partition        6   \n",
        "4                                       A lion sees with  partition        4   \n",
        "...                                                  ...        ...      ...   \n",
-       "32807            Different voices have different musical     syntax        5   \n",
-       "32808  School education is given equally in both Ital...     syntax        9   \n",
-       "32809    Different groups think the word means different     syntax        7   \n",
-       "32810  Many people think it is one of the most influe...     syntax       12   \n",
-       "32811             Many people are said to have seen ball     syntax        8   \n",
+       "46199            Different voices have different musical     syntax        5   \n",
+       "46200  School education is given equally in both Ital...     syntax        9   \n",
+       "46201    Different groups think the word means different     syntax        7   \n",
+       "46202  Many people think it is one of the most influe...     syntax       12   \n",
+       "46203             Many people are said to have seen ball     syntax        8   \n",
        "\n",
        "      seed   dataset  \n",
        "0        0  negation  \n",
@@ -293,16 +293,16 @@
        "3        0  negation  \n",
        "4        0  negation  \n",
        "...    ...       ...  \n",
-       "32807    1  generics  \n",
-       "32808    1  generics  \n",
-       "32809    1  generics  \n",
-       "32810    1  generics  \n",
-       "32811    1  generics  \n",
+       "46199    1  generics  \n",
+       "46200    1  generics  \n",
+       "46201    1  generics  \n",
+       "46202    1  generics  \n",
+       "46203    1  generics  \n",
        "\n",
-       "[32812 rows x 12 columns]"
+       "[46204 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,8 @@
        "    <tr>\n",
        "      <th rowspan=\"6\" valign=\"top\">generics</th>\n",
        "      <th>lime</th>\n",
-       "      <td>0.689339</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.685961</td>\n",
+       "      <td>0.003160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>partition</th>\n",
@@ -411,8 +411,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>random</th>\n",
-       "      <td>0.688533</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.687162</td>\n",
+       "      <td>0.005043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shap</th>\n",
@@ -432,8 +432,8 @@
        "    <tr>\n",
        "      <th rowspan=\"6\" valign=\"top\">negation</th>\n",
        "      <th>lime</th>\n",
-       "      <td>0.577953</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.575861</td>\n",
+       "      <td>0.002318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>partition</th>\n",
@@ -442,8 +442,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>random</th>\n",
-       "      <td>0.594707</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.577342</td>\n",
+       "      <td>0.012580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shap</th>\n",
@@ -463,8 +463,8 @@
        "    <tr>\n",
        "      <th rowspan=\"6\" valign=\"top\">rocstories</th>\n",
        "      <th>lime</th>\n",
-       "      <td>0.659697</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.662521</td>\n",
+       "      <td>0.003780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>partition</th>\n",
@@ -473,8 +473,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>random</th>\n",
-       "      <td>0.658436</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.657383</td>\n",
+       "      <td>0.001906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>shap</th>\n",
@@ -498,27 +498,27 @@
       "text/plain": [
        "                          mean       std\n",
        "dataset    algorithm                    \n",
-       "generics   lime       0.689339       NaN\n",
+       "generics   lime       0.685961  0.003160\n",
        "           partition  0.687029  0.004578\n",
-       "           random     0.688533       NaN\n",
+       "           random     0.687162  0.005043\n",
        "           shap       0.596951       NaN\n",
        "           syntax     0.614685  0.006755\n",
        "           syntax-w   0.638033  0.001772\n",
-       "negation   lime       0.577953       NaN\n",
+       "negation   lime       0.575861  0.002318\n",
        "           partition  0.585225  0.010090\n",
-       "           random     0.594707       NaN\n",
+       "           random     0.577342  0.012580\n",
        "           shap       0.581616       NaN\n",
        "           syntax     0.554645  0.019438\n",
        "           syntax-w   0.539817  0.020058\n",
-       "rocstories lime       0.659697       NaN\n",
+       "rocstories lime       0.662521  0.003780\n",
        "           partition  0.660815  0.007354\n",
-       "           random     0.658436       NaN\n",
+       "           random     0.657383  0.001906\n",
        "           shap       0.591031       NaN\n",
        "           syntax     0.589297  0.004998\n",
        "           syntax-w   0.608500  0.004703"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -569,9 +569,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>lime</td>\n",
-       "      <td>0.689339</td>\n",
-       "      <td>0.577953</td>\n",
-       "      <td>0.659697</td>\n",
+       "      <td>0.685961</td>\n",
+       "      <td>0.575861</td>\n",
+       "      <td>0.662521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -583,9 +583,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>random</td>\n",
-       "      <td>0.688533</td>\n",
-       "      <td>0.594707</td>\n",
-       "      <td>0.658436</td>\n",
+       "      <td>0.687162</td>\n",
+       "      <td>0.577342</td>\n",
+       "      <td>0.657383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -615,15 +615,15 @@
       "text/plain": [
        "         algorithm      mean                     \n",
        "dataset             generics  negation rocstories\n",
-       "0             lime  0.689339  0.577953   0.659697\n",
+       "0             lime  0.685961  0.575861   0.662521\n",
        "1        partition  0.687029  0.585225   0.660815\n",
-       "2           random  0.688533  0.594707   0.658436\n",
+       "2           random  0.687162  0.577342   0.657383\n",
        "3             shap  0.596951  0.581616   0.591031\n",
        "4           syntax  0.614685  0.554645   0.589297\n",
        "5         syntax-w  0.638033  0.539817   0.608500"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
