--- a/notebooks/Scores_Visualization_GPT2.ipynb
+++ b/notebooks/Scores_Visualization_GPT2.ipynb
@@ -57,13 +57,13 @@
     "seed_ = 0\n",
     "\n",
     "\n",
-    "filter_ids_path = os.path.join(data_save_dir, f\"{dataset}\")\n",
-    "with open(os.path.join(filter_ids_path, f\"{dataset}_{model_name}_stats.pkl\"), \"rb\") as f:\n",
-    "    stats = pickle.load(f)\n",
+    "#filter_ids_path = os.path.join(data_save_dir, f\"{dataset}\")\n",
+    "#with open(os.path.join(filter_ids_path, f\"{dataset}_{model_name}_stats.pkl\"), \"rb\") as f:\n",
+    "    #stats = pickle.load(f)\n",
     "\n",
-    "print(\"Size of the dataset:\", stats[\"n_data\"])\n",
-    "print(\"Size of filtered dataset:\", stats[\"n_filtered\"])\n",
-    "print(\"Maximum number of batches:\", stats[\"n_filtered\"]//batch_size)"
+    "#print(\"Size of the dataset:\", stats[\"n_data\"])\n",
+    "#print(\"Size of filtered dataset:\", stats[\"n_filtered\"])\n",
+    "#print(\"Maximum number of batches:\", stats[\"n_filtered\"]//batch_size)"
    ]
   },
   {
@@ -230,7 +230,7 @@
    ],
    "source": [
     "\n",
-    "folder_path = f\"/cluster/work/zhang/kamara/syntax-shap/results_ids/explanations/{model_name}/{dataset}\"  # Replace with your folder path\n",
+    "folder_path = f\"/cluster/work/zhang/kamara/syntax-shap/results/explanations/{model_name}/{dataset}\"  # Replace with your folder path\n",
     "\n",
     "# Initialize a list to store the dataframes\n",
     "df_list = []\n",
