--- a/notebooks/Scores_Visualization_GPT2.ipynb
+++ b/notebooks/Scores_Visualization_GPT2.ipynb
@@ -2636,7 +2636,7 @@
     "\n",
     "                # Add the extracted details as new columns\n",
     "                df['algorithm'] = algorithm\n",
-    "                df['n_token'] = df['input'].str.split().apply(len)\n",
+    "                df['n_token'] = df['tokens'].apply(len)\n",
     "                df['threshold'] = eval(threshold)\n",
     "                df['dataset'] = dataset\n",
     "\n",
@@ -2822,7 +2822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
