--- a/notebooks/ShapleyValuesSampling.ipynb
+++ b/notebooks/ShapleyValuesSampling.ipynb
@@ -140,126 +140,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = \"A father\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': [32, 2988], 'attention_mask': [1, 1]}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inp = tokenizer(prompt)\n",
-    "inp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': [13552], 'attention_mask': [1]}"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inp = tokenizer(\"mother\")\n",
-    "inp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp = TextTokenInput(\n",
-    "    prompt, \n",
-    "    tokenizer,\n",
-    "    skip_tokens=[1],  # skip the special token for the start of the text <s>\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[  32, 2988,  318,  407,  257]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#inp.to_tensor()\n",
-    "inp.to_model_input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "sv_llm_attr = LLMAttribution(sv, tokenizer)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<captum.attr._core.llm_attr.LLMAttributionResult at 0x1746bcd50>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sv_llm_attr.attribute(inp)"
+    "import torch\n",
+    "from torch import Tensor\n",
+    "from captum._utils.common import _run_forward, _format_additional_forward_args\n",
+    "from captum.attr._utils.common import (\n",
+    "    _find_output_mode_and_verify,\n",
+    "    _format_input_baseline,\n",
+    "    _tensorize_baseline,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def _strict_run_forward(*args, **kwargs):\n",
+    "    \"\"\"\n",
+    "    A temp wrapper for global _run_forward util to force forward output\n",
+    "    type assertion & conversion.\n",
+    "    Remove after the strict logic is supported by all attr classes\n",
+    "    \"\"\"\n",
+    "    forward_output = _run_forward(*args, **kwargs)\n",
+    "    if isinstance(forward_output, Tensor):\n",
+    "        # format scalar to shape (1) so we can always assume non-empty output_shape\n",
+    "        if not forward_output.shape:\n",
+    "            forward_output = forward_output.reshape(1)\n",
+    "\n",
+    "        return forward_output\n",
+    "\n",
+    "    output_type = type(forward_output)\n",
+    "    assert output_type is int or output_type is float, (\n",
+    "        \"the return of forward_func must be a tensor, int, or float,\"\n",
+    "        f\" received: {forward_output}\"\n",
+    "    )\n",
+    "\n",
+    "    # using python built-in type as torch dtype\n",
+    "    # int -> torch.int64, float -> torch.float64\n",
+    "    # ref: https://github.com/pytorch/pytorch/pull/21215\n",
+    "    return torch.tensor([forward_output], dtype=output_type)"
    ]
   },
   {
@@ -268,28 +187,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attr_res = sv_llm_attr.attribute(inp, num_trials=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'attr_res' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mattr_res\u001b[49m\u001b[38;5;241m.\u001b[39mplot_token_attr(show\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'attr_res' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "attr_res.plot_token_attr(show=True)"
+    "prompt = \"My father is not a\"\n",
+    "target = \"mother\"\n",
+    "inp = TextTokenInput(\n",
+    "    prompt, \n",
+    "    tokenizer,\n",
+    "    skip_tokens=[1],  # skip the special token for the start of the text <s>\n",
+    ")\n",
+    "print('inp to tensor', inp.to_tensor())\n",
+    "\n",
+    "if type(target) is str:\n",
+    "    # exclude sos\n",
+    "    target_tokens = tokenizer.encode(target)[1:]\n",
+    "    target_tokens = torch.tensor(target_tokens)\n",
+    "    \n",
+    "#use_cached_outputs=False\n",
+    "#_inspect_forward=None\n",
+    "target_idx = [0]\n",
+    "additional_forward_args = _format_additional_forward_args((inp, target_tokens))\n",
+    "print(additional_forward_args)\n",
+    "\n",
+    "inputs = inp.to_tensor()\n",
+    "baselines = None\n",
+    "\n",
+    "\n",
+    "inputs, baselines = _format_input_baseline(inputs, baselines)\n",
+    "baselines = _tensorize_baseline(inputs, baselines)\n",
+    "\n",
+    "_run_forward(model, baselines, None, additional_forward_args)"
    ]
   },
   {
