--- a/notebooks/Scores_Visualization_GPT2.ipynb
+++ b/notebooks/Scores_Visualization_GPT2.ipynb
@@ -486,7 +486,7 @@
     "\n",
     "# Adjusting various parameters\n",
     "# Plotting with Seaborn\n",
-    "sns.set_style(\"ticks\")\n",
+    "sns.set_style(\"whitegrid\")\n",
     "sns.set_context(\"notebook\", rc={\"xtick.labelsize\" : 15, \"ytick.labelsize\" : 15})\n",
     "\n",
     "\n",
