lime for mistral

--- a/notebooks/Sensitivity_Analysis.ipynb
+++ b/notebooks/Sensitivity_Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,48 @@
     "\n",
     "model_name = \"gpt2\"\n",
     "threshold_ = 0.5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances with 'a' or 'the' for the model gpt2 on generics: 407, which represents 7.05% of the dataset\n",
+      "Number of instances with 'a' or 'the' for the model gpt2 on rocstories: 150, which represents 6.59% of the dataset\n",
+      "Number of instances with 'a' or 'the' for the model gpt2 on negation: 222, which represents 41.57% of the dataset\n",
+      "gpt2 has 41.57% of next token that are 'a' or 'the' in the three datasets\n",
+      "Number of instances with 'a' or 'the' for the model mistral on generics: 624, which represents 10.80% of the dataset\n",
+      "Number of instances with 'a' or 'the' for the model mistral on rocstories: 313, which represents 13.76% of the dataset\n",
+      "Number of instances with 'a' or 'the' for the model mistral on negation: 292, which represents 54.68% of the dataset\n",
+      "mistral has 54.68% of next token that are 'a' or 'the' in the three datasets\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = \"/cluster/home/kamara/syntax-shap\"\n",
+    "\n",
+    "for model in [\"gpt2\", \"mistral\"]:\n",
+    "    model_count, model_total = 0, 0\n",
+    "    for dataset in [\"generics\", \"rocstories\", \"negation\"]:\n",
+    "        path = os.path.join(root,f\"data/{dataset}/seed_0/{dataset}_{model}_0_predictions.csv\")\n",
+    "        df_pred = pd.read_csv(path)\n",
+    "        total = len(df_pred)\n",
+    "        df_pred = df_pred.dropna()\n",
+    "        #count the number of instances which prediction y contains \"a\" or \"the\"\n",
+    "        # Filter the rows where 'prediction' contains \"a\" or \"the\" (case-insensitive)\n",
+    "        #filtered_df = df_pred[df_pred['y'].str.contains(r'\\ba\\b|\\bthe\\b', case=False, regex=True)]\n",
+    "        filtered_df = df_pred[(df_pred['y']==\"a\")|(df_pred['y']==\"the\")|(df_pred['y']==\" a\")|(df_pred['y']==\" the\")|(df_pred['y']==\"A\")|(df_pred['y']==\"The\")|(df_pred['y']==\" A\")|(df_pred['y']==\" the\")]\n",
+    "        # Count the number of instances\n",
+    "        count = len(filtered_df)\n",
+    "        model_count += count\n",
+    "        model_total += total\n",
+    "        print(f\"Number of instances with 'a' or 'the' for the model {model} on {dataset}: {count}, which represents {count/total*100:.2f}% of the dataset\")\n",
+    "    print(f\"{model} has {count/total*100:.2f}% of next token that are 'a' or 'the' in the three datasets\")"
    ]
   },
   {
